<resources>
    <string name="app_name">Cek Jadwal App</string>
    <string name="full_name">full name</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="nim">nim</string>
    <string name="kode_mk">kode mata kuliah</string>
    <string name="nama_mk">nama mata kuliah</string>
    <string name="kode_ruang">kode ruang</string>
    <string name="tanggal">tanggal (yyyy/mm/dd)</string>
    <string name="waktu">waktu (HH:mm)</string>
    <string name="register">Add User</string>
    <string name="check_jadwal">Check Jadwal</string>
    <string name="add_jadwal">Add Jadwal</string>
    <string name="edit_jadwal">Edit Jadwal</string>
    <string name="hapus">Hapus</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="role">role</string>
    <string name="admin">admin</string>
    <string name="user">user</string>
    <string name="sudah">sudah</string>
    <string name="belum">belum</string>
    <string name="welcome">Hello, %1$s!!!</string>
    <string name="bye">Bye, %1$s!!!</string>
    <string name="welcome_role">You logged in as %1$s.</string>
    <string name="welcome_men">Please choose menu below</string>
    <string name="input_error_kodemk">kode mata kuliah required</string>
    <string name="input_error_namamk">mata kuliah name required</string>
    <string name="input_error_koderuang">kode ruang required</string>
    <string name="input_error_tanggal">tanggal required</string>
    <string name="input_error_waktu">waktu required</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_username">username required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_nim">NIM required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="hapusJadwal_success">Jadwal deleted Successfully</string>
    <string name="editJadwal_success">Jadwal updated Successfully</string>
    <string name="editUser_success">User profile updated Successfully</string>
    <string name="addJadwal_success">New Jadwal Registered Successfully</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="editJadwal_filed">Jadwal update Failed</string>
    <string name="editUser_filed">User profile update Failed</string>
    <string name="addJadwal_filed">New Jadwal Registration Failed</string>
    <string name="registration_filed">Registration Failed</string>
    <string name="input_error_email_invalid">enter a valid email</string>
</resources>
