<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardAdmin">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/large_padding"
        android:textColor="@color/colorButtonTransparent"
        android:textSize="@dimen/app_name_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/welcome"
            android:id="@+id/text_welcome_admin"
            android:textAlignment="center"
            android:textColor="@color/colorButtonTransparent"
            android:textSize="@dimen/welcome_size" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/welcome_role"
            android:textAlignment="center"
            android:id="@+id/text_welcome_role_admin"
            android:textColor="@color/colorButtonTransparent"
            android:textSize="@dimen/welcome_size" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/welcome_men"
            android:textAlignment="center"
            android:textColor="@color/colorButtonTransparent"
            android:textSize="@dimen/welcome_size" />

        <Button
            android:id="@+id/button_add_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/colorButtonTransparent"
            android:onClick="button_add_user_Click"/>

        <Button
            android:id="@+id/button_check_jadwal_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_jadwal"
            android:textAllCaps="false"
            android:textColor="@color/colorButtonTransparent"
            android:onClick="button_check_jadwal_Click"/>

        <Button
            android:id="@+id/button_add_jadwal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_jadwal"
            android:textAllCaps="false"
            android:textColor="@color/colorButtonTransparent"
            android:onClick="button_add_jadwal_Click"/>

        <Button
            android:id="@+id/button_logout_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/colorButtonTransparent"
            android:onClick="button_logout_Click"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
