<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".EditJadwalAdmin">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/default_padding">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/addevent"/>

        <TextView
            android:id="@+id/text_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/edit_jadwal"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/app_name_size" />

        <EditText
            android:id="@+id/edit_text_kodemk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:drawablePadding="@dimen/drawable_padding"
            android:maxLines="1"
            android:maxLength="9"
            android:hint="@string/kode_mk"
            android:inputType="textCapWords"
            android:nextFocusDown="@id/edit_text_namamk"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"
            android:drawableStart="@drawable/ic_font_download_black_24dp"/>

        <EditText
            android:id="@+id/edit_text_namamk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/nama_mk"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:nextFocusDown="@id/edit_text_koderuang"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"
            android:drawableStart="@drawable/ic_font_download_black_24dp"/>
        <EditText
            android:id="@+id/edit_text_koderuang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/kode_ruang"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:nextFocusDown="@id/edit_text_tanggal"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"
            android:drawableStart="@drawable/ic_looks_one_black_24dp"/>


        <EditText
            android:id="@+id/edit_text_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/tanggal"
            android:inputType="date"
            android:nextFocusDown="@id/edit_text_waktu"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"
            android:drawableStart="@drawable/ic_date_range_black_24dp"/>

        <EditText
            android:id="@+id/edit_text_waktu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/waktu"
            android:inputType="time"
            android:nextFocusDown="@id/rbSudah"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"
            android:drawableStart="@drawable/ic_access_time_black_24dp"/>

        <RadioGroup
            android:id="@+id/groupStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorText"
                android:textSize="@dimen/small_size"
                android:drawableStart="@drawable/ic_turned_in_not_black_24dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbSudah"
                android:layout_marginStart="@dimen/default_padding"
                android:text="@string/sudah"
                android:textColor="@color/colorText"
                android:buttonTint="@color/colorText"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbBelum"
                android:layout_marginStart="@dimen/default_padding"
                android:text="@string/belum"
                android:textColor="@color/colorText"
                android:buttonTint="@color/colorText"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_margin="20dp">

            <Button
                android:id="@+id/button_edit_jadwal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/edit_jadwal"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="button_edit_jadwal_Click"/>

            <Button
                android:id="@+id/button_hapus_jadwal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/button"
                android:onClick="button_edit_hapus_Click"
                android:text="@string/hapus"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbarAddJadwal"
        android:layout_below="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
