<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:gravity="center"
        android:padding="@dimen/default_padding">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/check"/>

        <TextView
            android:id="@+id/text_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorButtonTransparent"
            android:textSize="@dimen/app_name_size" />

        <EditText
            android:id="@+id/edit_text_username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/username"
            android:nextFocusDown="@id/edit_text_email"
            android:textColor="@color/colorButtonTransparent"
            android:textColorHint="@color/colorHint"
            android:drawableStart="@drawable/ic_account_box_black_24dp"/>


        <EditText
            android:id="@+id/edit_text_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:nextFocusDown="@id/button_register"
            android:textColor="@color/colorButtonTransparent"
            android:textColorHint="@color/colorHint"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"/>


        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="button_login_Click"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerInParent="true" />

</RelativeLayout>
