<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Profile">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/default_padding">

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="120dp"
            android:layout_height="120dp"/>

        <TextView
            android:id="@+id/text_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="Profile"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/app_name_size" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/full_name"
            android:maxLines="1"
            android:nextFocusDown="@id/edit_text_username"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"
            android:drawableStart="@drawable/ic_font_download_black_24dp"
            android:enabled="false"/>

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/username"
            android:maxLines="1"
            android:nextFocusDown="@id/edit_text_email"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"
            android:drawableStart="@drawable/ic_account_box_black_24dp"
            android:enabled="false"/>
        <EditText
            android:id="@+id/edit_text_nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/nim"
            android:inputType="number"
            android:maxLength="8"
            android:maxLines="1"
            android:nextFocusDown="@id/edit_text_email"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"
            android:drawableStart="@drawable/ic_looks_one_black_24dp"
            android:enabled="false"/>

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/email"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/edit_text_role"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:enabled="false"/>


        <EditText
            android:id="@+id/edit_text_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/role"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"
            android:drawableStart="@drawable/ic_group_black_24dp"
            android:enabled="false"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_below="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
